# ElecPhys

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
docs/: available_analysis.md  requirements.txt
docs/source/: conf.py  elecphys.rst  index.rst  modules.rst
elecphys/: __init__.py  cfc.py  conversion.py  data_io.py  data_loading.py  dimensionality_reduction.py  fourier_analysis.py  handlers.py  main.py  preprocessing.py  utils.py  visualization.py
elecphys/matlab_scripts/: convertRHD2Mat.m
src/: main.py
src/lib/: conversion.py  data_loading.py  dimensionality_reduction.py  fourier_analysis.py  handlers.py  preprocessing.py  utils.py  visualization.py
src/matlab_scripts/: convertRHD2Mat.m
test/: main.py  test_cases.py
test/data/mat/: sample.mat
test/data/npz/: Ch1.npz  Ch10.npz  Ch11.npz  Ch12.npz  Ch13.npz  Ch14.npz  Ch15.npz  Ch16.npz  Ch17.npz  Ch18.npz  Ch19.npz  Ch2.npz  Ch20.npz  Ch21.npz  Ch22.npz  Ch23.npz  Ch24.npz  Ch25.npz  Ch26.npz  Ch27.npz  Ch28.npz  Ch29.npz  Ch3.npz  Ch30.npz  Ch31.npz  Ch32.npz  Ch4.npz  Ch5.npz  Ch6.npz  Ch7.npz  Ch8.npz  Ch9.npz
