[metadata]
name = ElecPhys
description = A Python package for electrophysiology data analysis. It provides tools for data loading, analysis, conversion, preprocessing, and visualization.
long_description_content_type = text/markdown
url = https://github.com/AminAlam/ElecPhys
project_urls =
    Bug Tracker = https://github.com/AminAlam/ElecPhys/issues
    Changelog = https://github.com/AminAlam/ElecPhys/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ElecPhys = ElecPhys.main:entry_point
